# dev-ozon

./: .env  Cargo.toml  README.md
migrations/: create_common_info_product.sql  create_info_prices.sql  create_product_list.sql  items.sql
migrations/create/: create_common_info_product.sql  create_info_prices.sql  items.sql
migrations/drop/: drop_common_info_product.sql  drop_info_prices.sql
req/: req.json
src/: main.rs
src/application/: common_processing.rs  handlers.rs  mod.rs  processing.rs
src/common/: config.rs
src/presentation/: info_prices_dto.rs  mod.rs  product_list_dto.rs
