[package]
name = "ozon_original"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
actix-web = "4.9.0"
dotenv = "0.15.0"
serde = { version = "1.0.205", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
http = "1.1.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.40.0", features = ["full"] }
